[package]
name = "task3_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.15.0"  # Use the latest compatible version
ic-cdk-macros = "0.15.0"  # Use the latest compatible version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Feel free to remove this dependency if you don't need timers
